# sfml-python

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: pip.yml  wheels.yml
Bindings/: Audio.hpp  Audio.ixx  BaseHeader.hpp
Bindings/Audio/: AudioResource.hpp  Export.hpp  InputSoundFile.hpp  Listener.hpp  Music.hpp  SoundStream.hpp
src/: RootBinding.cpp  nanobind_example_ext.cpp
src/python_sfml/: __init__.py
tests/: test_basic.py
