[build-system]
requires = ["scikit-build-core >=0.11.6", "nanobind >=2.8.0"]
build-backend = "scikit_build_core.build"

[project]
name = "pythonSFMLBindis"
version = "0.1.1.c"
description = "An example minimal project that compiles bindings using nanobind and scikit-build"
readme = "README.md"    
requires-python = ">=3.13"
authors = [
    { name = "Mayukh Banik", email = "mayukh1banik@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: BSD License",
]

[project.urls]
Homepage = "https://github.com/Mayukh-Banik/sfml-python"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "build-system.requires"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.scikit-build.cmake.define]
CMAKE_POSITION_INDEPENDENT_CODE = "ON"

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1
build = "cp3*-*"

# Run pytest to ensure that the package was correctly built
test-command = "pytest {project}/tests"
test-requires = "pytest"

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"
